tee ~/ros2_ws/src/dock_comm/package.xml >/dev/null <<'EOF'
<?xml version="1.0"?>
<package format="3">
  <name>dock_comm</name>
  <version>0.1.0</version>
  <description>Dock reservation & landing clearance software.</description>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
EOF

